[gd_scene load_steps=9 format=3 uid="uid://uq4e4sun6kp1"]

[ext_resource type="Script" path="res://scripts/enemies/basic_enemy_template.gd" id="1_rskcy"]
[ext_resource type="PackedScene" uid="uid://dhber54gts68q" path="res://scenes/attack_box.tscn" id="2_b1sln"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="3_qg0i0"]
[ext_resource type="Script" path="res://scripts/fsm.gd" id="4_t2ob1"]
[ext_resource type="PackedScene" uid="uid://6hn8g0nnaa06" path="res://scenes/health_bar.tscn" id="5_vvik5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrsvg"]
resource_local_to_scene = true
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bsxcu"]
resource_local_to_scene = true
size = Vector2(12, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hx3b4"]
resource_local_to_scene = true
size = Vector2(12, 42)

[node name="BasicEnemy" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_rskcy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_hrsvg")

[node name="Pivot" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
texture_filter = 1

[node name="GapDetector" type="RayCast2D" parent="Pivot"]
position = Vector2(11, 0)
target_position = Vector2(0, 15)
collision_mask = 129

[node name="WallDetector" type="RayCast2D" parent="Pivot"]
position = Vector2(6, -24)
target_position = Vector2(10, 0)
collide_with_areas = true

[node name="PlayerDetector" type="RayCast2D" parent="Pivot"]
position = Vector2(0, -25)
exclude_parent = false
target_position = Vector2(25, 0)
collision_mask = 8

[node name="AttackBox" parent="Pivot" instance=ExtResource("2_b1sln")]
collision_layer = 2

[node name="CollisionShape2D" parent="Pivot/AttackBox" index="0"]
shape = SubResource("RectangleShape2D_bsxcu")

[node name="Hurtbox" type="Area2D" parent="Pivot" node_paths=PackedStringArray("target")]
collision_layer = 16
collision_mask = 4
script = ExtResource("3_qg0i0")
target = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Hurtbox"]
position = Vector2(0, -21)
shape = SubResource("RectangleShape2D_hx3b4")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("animator", "actor", "pivot")]
script = ExtResource("4_t2ob1")
animator = NodePath("../AnimationPlayer")
actor = NodePath("..")
pivot = NodePath("../Pivot")

[node name="RestTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvulTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("5_vvik5")]

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(2.38419e-07, -10)
enable_node_path = NodePath("../FiniteStateMachine")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="Pivot/Hurtbox" to="Pivot/Hurtbox" method="_on_area_entered"]
[connection signal="timeout" from="RestTimer" to="." method="_on_rest_timer_timeout"]
[connection signal="timeout" from="InvulTimer" to="." method="_on_invul_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="FiniteStateMachine" method="_on_animation_finished"]

[editable path="Pivot/AttackBox"]
